Update wt lab 2 question 3.html

--- a/wt lab 2 question 3.html
+++ b/wt lab 2 question 3.html
@@ -12,8 +12,8 @@
         <hr>
         <h1 align="center">Continents</h1>
         <ul>
-            <h2><b><img src="C:\Users\maniz\OneDrive\Desktop\nnn.bmp" height="15" width="40">Asia</b></h2>
-            <h2><b><img src="C:\Users\maniz\OneDrive\Desktop\nnn.bmp"height="15" width="40" >Europe</b></h2>
+            <h2><b><img src="C:\Users\maniz\OneDrive\Desktop\nnn.bmp" height="15" width="40"><u>Asia</u></b></h2>
+            <h2><b><img src="C:\Users\maniz\OneDrive\Desktop\nnn.bmp"height="15" width="40" ><u>Europe</u></b></h2>
         </ul>
         <hr>
     </body>
